@startuml domain

skinparam linetype ortho

rectangle #36827F{
class Building  << Root >> << Entity >>
class BuildingDescription  << (v,#A4C2E5) ValueObject >>
class BuildingName  << (v,orange) ValueObject >> << unique >>


class Floor  << Entity >>
class FloorNumber  << (v,#A4C2E5) ValueObject >>
class FloorDescription  << (v,#A4C2E5) ValueObject >>

class FloorMap  << Entity >>

class Passageway  << Entity >>

class Elevator  << Entity >>

class Room << Entity >>
class RoomId << (v,orange) ValueObject >> << unique >>

}
'========================================================

Building "1"-u->"*" Floor
Building "1"-r->"0..1" Elevator
Building "*"-->"0..1" BuildingDescription
Building "1"-->"1" BuildingDescription

Room "1"-u->"1" RoomId


Floor "2"-l->"0..*" Passageway

Floor "1"-r->"1" FloorMap
Floor "1"-u->"*" Room
Floor "*"-u->"1" FloorNumber
Floor "*"-u->"1" FloorDescription
@enduml
